# gatherle-monorepo

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.node.json  tsconfig.web.json  vercel.json
.github/: copilot-instructions.md
.github/agents/: api.agent.md  architect.agent.md  frontend.agent.md  mobile.agent.md  security.agent.md  testing.agent.md  webapp.agent.md
.github/prompts/: plan-doneTask.prompt.md  plan-newTask.prompt.md  pr-generation.prompt.md
.github/scripts/: export-api-e2e-mongo-url.sh
.github/workflows/: beta-deploy.yaml  codeql.yaml  deploy-dns.yaml  deploy-trigger.yaml  deploy.yaml  pipeline.yaml  pr-check.yaml  presubmit-ci.yaml  security-check.yaml
apps/api/: .dockerignore  .env  .eslintrc.cjs  .gitignore  Dockerfile  README.md  eslint.config.cjs  nodemon.json  (+8 more)
apps/ops-cli/: .gitignore  README.md  pyproject.toml  setup.py
apps/ops-cli/gatherle/: __init__.py  __main__.py  config.py  runtime.py
apps/ops-cli/gatherle/commands/: __init__.py  commons.py  db.py  events.py  public_seed.py  seed.py
apps/ops-cli/gatherle/scripts/: __init__.py  harvest_gauteng_events.py
apps/ops-cli/tests/: test_cli.py  test_config.py  test_runtime.py
docs/: aws-account-setup.md  beta-launch-readiness.md  bugs-discovered.md  commons-boundary.md  data-model.md  environment-variables.md  local-ci.md  project-brief.md  project-state.md  session-state-plan.md  task-backlog.md
infra/: .env  .gitignore  README.md  cdk.context.json  cdk.json  package-lock.json  package.json
scripts/: check-commons-boundaries.mjs
(+1699 files in other folders)
